# Power-Outage-Watcher

./: .gitignore  README.md  config_parser.py  main.py  pyproject.toml  sample_config.yaml  utilies.py
.github/workflows/: lint.yml
parsers/: cesc_mysore.py
