[project]
name = "power-outage-watcher"
version = "0.1.0"
description = "Monitors electricity scheduled downtimes and notifies users."
authors = [{name = "Jugal Kishore", email = "me@devjugal.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.13.4",
    "humanize>=4.12.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]
