[project]
name = "power-outage-watcher"
version = "0.1.0"
description = "Monitors electricity scheduled downtimes and notifies users."
authors = [{name = "Jugal Kishore", email = "me@devjugal.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.13.5",
    "flake8>=7.3.0",
    "humanize>=4.12.3",
    "pylint>=3.3.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]
